--- a/HackNC/Base.lproj/Main.storyboard
+++ b/HackNC/Base.lproj/Main.storyboard
@@ -1,25 +1,72 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gzq-eM-kKg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="3qI-Ka-80w">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="Gzq-eM-kKg" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eyA-Ki-0iQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="FMw-7y-gnb" kind="relationship" relationship="rootViewController" id="fwn-2L-a9d"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y5t-rh-C0o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-170" y="-306"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="n2h-RB-knY">
+            <objects>
+                <viewController id="FMw-7y-gnb" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Bhk-OI-Dqd"/>
+                        <viewControllerLayoutGuide type="bottom" id="u52-gl-SSX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Gqd-jP-oNx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8LZ-VX-Z4Y" customClass="AIVoiceRequestButton">
+                                <rect key="frame" x="171" y="332" width="72" height="72"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="IiT-bh-5qK"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="72" id="RxC-cS-vQU"/>
+                                    <constraint firstAttribute="height" constant="128" id="h2s-2G-Ny4"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="72" id="oE0-fW-jAE"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="RxC-cS-vQU"/>
+                                        <exclude reference="oE0-fW-jAE"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.19439266229999999" green="1" blue="0.56013129790000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="8LZ-VX-Z4Y" firstAttribute="centerY" secondItem="Gqd-jP-oNx" secondAttribute="centerY" id="0QE-Pr-vco"/>
+                            <constraint firstItem="8LZ-VX-Z4Y" firstAttribute="centerX" secondItem="Gqd-jP-oNx" secondAttribute="centerX" id="Lth-Je-sz0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="noO-m5-tka"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="button" destination="8LZ-VX-Z4Y" id="n6F-Ss-YsK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FWY-Iv-bkb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="532" y="-307"/>
         </scene>
     </scenes>
 </document>
