--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -17,6 +17,14 @@ html {
     height: 100%;
 }
 
+
+ul li {
+    margin: 10 0 25px;
+    padding-left: 0px;
+    font-size: 18px;
+}
+
+
 h1,
 h2,
 h3,
@@ -265,7 +273,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/0001-UNC.jpg) no-repeat center center scroll;
+    background: url(../img/header.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -346,6 +354,7 @@ footer {
 
 footer p {
     margin: 0;
+    font-size: 13px;
 }
 
 ::-moz-selection {
